Add image directory

--- a/index.html
+++ b/index.html
@@ -8,6 +8,22 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
+    <div class="header">
+        <h1>Free City</h1>
+        <form action="#" method="post">
+            <label for="username"></label>
+            <input type="text" name="username" id="username">
+
+            <label for="password"></label>
+            <input type="password" name="username" id="username">
+
+            <button type="submit">Sign In</button>
+        </form>
+    </div>
+
+    <div class="container">
+        <img src="" alt="">
+        <div class="content"></div>
+    </div>
 </body>
 </html>
