--- a/index.html
+++ b/index.html
@@ -4,26 +4,57 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sign-Up</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div class="header">
-        <h1>Free City</h1>
-        <form action="#" method="post">
-            <label for="username"></label>
-            <input type="text" name="username" id="username">
-
-            <label for="password"></label>
-            <input type="password" name="username" id="username">
-
-            <button type="submit">Sign In</button>
-        </form>
-    </div>
-
     <div class="container">
-        <img src="" alt="">
-        <div class="content"></div>
+        <div class="left-side">
+            <div class="logo">
+                <h1>Welcome to Free City!</h1>
+            </div>
+        </div>
+
+        <!-- <img src="./img/girl.jpg" alt=""> -->
+        
+        <div class="right-side">
+            <div class="top">
+                <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up <em>now</em> to get started.</em></p>
+                <p>You <em>know</em> you want to.</p>
+            </div>
+
+            <form action="#" method="post">
+                <p>Let's do this!</p>
+                <div>
+                    <label for="fName">First Name</label>
+                    <input type="text"id="fName" name="fName">
+                </div>
+
+                <div>
+                    <label for="lName">Last Name</label>
+                    <input type="text"id="lName" name="lName">
+                </div>
+
+                <div>
+                    <label for="email">Email</label>
+                    <input type="email" name="email" id="email">
+                </div>
+
+                <div>
+                    <label for="phone">Phone Number</label>
+                    <input type="tel" name="phone" id="phone">
+                </div>
+
+                <div>
+                    <label for="password">Password</label>
+                    <input type="password" name="password" id="password">
+                </div>
+
+                <button type="submit">Create Account</button>
+            </form>
+
+            <p>Already have an account? <a href="">Log in</a></p>
+        </div>
     </div>
 </body>
 </html>
