--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
     <div class="container">
         <div class="left-side">
             <div class="logo">
-                <h1>Welcome to Free City!</h1>
+                <div class="neon-sign">自由城市</div>
+                <h1>Welcome to Free City !</h1>
             </div>
         </div>
-
-        <!-- <img src="./img/girl.jpg" alt=""> -->
         
         <div class="right-side">
             <div class="top">
@@ -23,37 +22,42 @@
                 <p>You <em>know</em> you want to.</p>
             </div>
 
-            <form action="#" method="post">
-                <p>Let's do this!</p>
+            <form action="#" method="post" id="form">
                 <div>
-                    <label for="fName">First Name</label>
+                    <label for="fName">FIRST NAME</label>
                     <input type="text"id="fName" name="fName">
                 </div>
 
                 <div>
-                    <label for="lName">Last Name</label>
+                    <label for="lName">LAST NAME</label>
                     <input type="text"id="lName" name="lName">
                 </div>
 
                 <div>
-                    <label for="email">Email</label>
+                    <label for="email">EMAIL</label>
                     <input type="email" name="email" id="email">
                 </div>
 
                 <div>
-                    <label for="phone">Phone Number</label>
+                    <label for="phone">PHONE</label>
                     <input type="tel" name="phone" id="phone">
                 </div>
 
                 <div>
-                    <label for="password">Password</label>
+                    <label for="password">PASSWORD</label>
                     <input type="password" name="password" id="password">
                 </div>
 
-                <button type="submit">Create Account</button>
+                <div>
+                    <label for="password2">CONFIRM PASSWORD</label>
+                    <input type="password" name="password" id="password2">
+                </div>
             </form>
 
-            <p>Already have an account? <a href="">Log in</a></p>
+            <div class="bottom">
+                <button type="submit" form="form">Create Account</button>
+                <p>Already have an account? <a href="">Log in</a></p>
+            </div>
         </div>
     </div>
 </body>
