--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign-Up</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/animate.min.css">
 </head>
 <body>
     <div class="container">
         <div class="left-side">
             <div class="logo">
                 <div class="neon-sign">自由城市</div>
-                <h1>Welcome to Free City !</h1>
+                <h1 class="animate__animated animate__flash">Welcome to Free City !</h1>
             </div>
         </div>
         
