Edit css file to accomodate smaller-sized viewports

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
             <div class="bottom">
                 <button type="submit" form="form">Create Account</button>
-                <p>Already have an account? <a href="">Log in</a></p>
+                <p>Already have an account? <a href="#">Log in</a></p>
             </div>
         </div>
     </div>
