Remove commented code and disable text-selection in header

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="left-side">
+        <div class="left-side" onmousedown="return false" onselectstart="return false">
             <div class="logo">
                 <div class="neon-sign">自由城市</div>
                 <h1 class="animate__animated animate__flash">Welcome to Free City !</h1>
