--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
             <form action="#" method="post" id="form">
                 <div>
                     <label for="fName">FIRST NAME</label>
-                    <input type="text"id="fName" name="fName">
+                    <input type="text"id="fName" name="fName" required>
                 </div>
 
                 <div>
                     <label for="lName">LAST NAME</label>
-                    <input type="text"id="lName" name="lName">
+                    <input type="text"id="lName" name="lName" required>
                 </div>
 
                 <div>
                     <label for="email">EMAIL</label>
-                    <input type="email" name="email" id="email">
+                    <input type="email" name="email" id="email" required>
                 </div>
 
                 <div>
@@ -46,12 +46,12 @@
 
                 <div>
                     <label for="password">PASSWORD</label>
-                    <input type="password" name="password" id="password">
+                    <input type="password" name="password" id="password" required>
                 </div>
 
                 <div>
                     <label for="password2">CONFIRM PASSWORD</label>
-                    <input type="password" name="password" id="password2">
+                    <input type="password" name="password2" id="password2" required>
                 </div>
             </form>
 
