Edit phone number regex pattern

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <label for="phone">
                         <span>PHONE</span>
                     </label>
-                    <input type="tel" name="phone" id="phone" pattern="/^[\d ()+-]+$/" title="Valid characters: digits, parenthesis, minus and plus signs.">
+                    <input type="tel" name="phone" id="phone" pattern="^\(?([0-9]{3})\)?[-.●]?([0-9]{3})[-.●]?([0-9]{4})$" title="Valid characters: digits, parenthesis, minus and plus signs.">
                 </div>
 
                 <div>
